<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="avatar_description" translatable="false">Netology avatar</string>
    <string name="menu_button_description" translatable="false">Menu button</string>
    <string name="author" translatable="false">Нетология пост блаблаблаьлаблаблаблаблабла</string>
    <string name="published" >16 july 2022</string>
    <string name="seen_counter" translatable="false">5K</string>
    <string name="like_counter" translatable="false">555</string>
    <string name="share_counter" translatable="false">77</string>
    <string name="post_text">Post text</string>
    <string name="edit_post_bar_title">Edit post</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="chooser_share_post">Share</string>
    <string name="error_empty_content">No content</string>
    <string name="ok_button_description">Ok button</string>
    <string name="channel_remote_name" translatable="false">NMEdia!</string>
    <string name="channel_remote_description">NMEdia! channel</string>
    <string name="notification_user_like">%1$s liked post by %2$s</string>
    <string name="notification_new_post"><big>%1$s</big> just shared a new post!</string>
</resources>